--- a/basicuser/templates/basicuser/update_ssid_data.html
+++ b/basicuser/templates/basicuser/update_ssid_data.html
@@ -20,8 +20,8 @@
 
             <ul class="nav nav-pills">
                 <li class="nav-item"><a href="/" class="nav-link" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="/create" class="nav-link active" aria-current="page">Create</a></li>
-                <li class="nav-item"><a href="/update" class="nav-link" aria-current="page">Update</a></li>
+                <li class="nav-item"><a href="/create" class="nav-link" aria-current="page">Create</a></li>
+                <li class="nav-item"><a href="/update" class="nav-link active" aria-current="page">Update</a></li>
                 <li class="nav-item"><a href="/admin" class="nav-link">Admin</a></li>
             </ul>
         </header>
@@ -31,7 +31,7 @@
     
     <div class="container m-auto">
         <div class="card m-auto" style="width: 15rem;">
-            <div class="card-header">Connect to Mind Charger</div>
+            <div class="card-header">Update WiFi</div>
             <div class="card-body">
                 <form class="form" role="form" method="POST">
                     {% csrf_token %}
