--- a/mind_charger/templates/home/index.html
+++ b/mind_charger/templates/home/index.html
@@ -21,6 +21,7 @@
             <ul class="nav nav-pills">
                 <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="/create" class="nav-link" aria-current="page">Create</a></li>
+                <li class="nav-item"><a href="/update" class="nav-link" aria-current="page">Update</a></li>
                 <li class="nav-item"><a href="/admin" class="nav-link">Admin</a></li>
             </ul>
         </header>
